--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,5 +54,19 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">#80000000</item>
     </style>
+    <!-- 버튼 텍스트 -->
+    <style name="ButtonText">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
+    <!-- //////다이얼로그///////// -->
+    <!-- 다이얼로그 제목용 스타일 -->
+    <style name="DialogTitleText">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
 </resources>
