--- a/app/src/main/res/layout/activity_emotion_summary.xml
+++ b/app/src/main/res/layout/activity_emotion_summary.xml
@@ -14,8 +14,8 @@
         android:background="@android:color/transparent"
         android:src="@drawable/ic_darkmode"
         android:contentDescription="다크모드"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,8 +27,8 @@
         android:background="@android:color/transparent"
         android:src="@drawable/ic_setting"
         android:contentDescription="설정"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,8 +45,8 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_dark_mode"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp" />
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="28dp" />
 
     <!-- 감정별 모아보기 -->
     <LinearLayout
@@ -54,10 +54,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@id/tv_main_title"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="24dp">
+        android:layout_marginStart="28dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -73,7 +73,132 @@
             android:src="@drawable/ic_array" />
     </LinearLayout>
 
-    <!-- 감정 점 뷰 (Grid 형태) -->
+    <!-- 감정별 모아보기 버튼 바로 아래에 붙여주세요 -->
+    <GridLayout
+        android:id="@+id/color_grid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="5"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_emotion_summary"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 1행 -->
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <!-- 3행 -->
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FFEB3B" />
+
+        <View
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/color_circle_selector"
+            android:backgroundTint="#FF9800" />
+
+    </GridLayout>
 
 
 
