--- a/app/src/main/res/layout/dialog_select_emotion.xml
+++ b/app/src/main/res/layout/dialog_select_emotion.xml
@@ -13,7 +13,7 @@
         android:id="@+id/btn_close"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/ic_close"
+        android:src="@drawable/ic_arrow_back"
         android:layout_gravity="end"
         android:contentDescription="닫기 버튼" />
 
